feat: se añaden query params a endpotin usuario/:documento/periodos udistrital/sisifo_documentacion#108
