# models/periodo_rol_usuario.go
@@ -212,12 +212,88 @@ func formatoFechas(p PeriodoRolUsuario) (PeriodoRolUsuario, error) {
 }
 
 // GetPeriodosByUsuarioId obtiene los periodos de un usuario dado su ID
-func GetPeriodosByUsuarioId(usuarioId int) ([]PeriodoRolUsuario, error) {
+func GetPeriodosByUsuarioId(usuarioId int, query map[string]string, fields []string, sortby []string, order []string,
+	offset int64, limit int64) (ml []interface{}, err error) {
+
 	o := orm.NewOrm()
-	var periodos []PeriodoRolUsuario
-	_, err := o.QueryTable("periodo_rol_usuario").Filter("usuario_id", usuarioId).All(&periodos)
-	if err != nil {
-		return nil, err
+	//var periodos []PeriodoRolUsuario
+	//_, err := o.QueryTable("periodo_rol_usuario").Filter("usuario_id", usuarioId).All(&periodos)
+	qs := o.QueryTable(new(PeriodoRolUsuario)).RelatedSel().Filter("usuario_id", usuarioId)
+	for k, v := range query {
+		// rewrite dot-notation to Object__Attribute
+		k = strings.Replace(k, ".", "__", -1)
+		if strings.Contains(k, "isnull") {
+			qs = qs.Filter(k, (v == "true" || v == "1"))
+		} else {
+			qs = qs.Filter(k, v)
+		}
 	}
-	return periodos, nil
+	// order by:
+	var sortFields []string
+	if len(sortby) != 0 {
+		if len(sortby) == len(order) {
+			// 1) for each sort field, there is an associated order
+			for i, v := range sortby {
+				orderby := ""
+				if order[i] == "desc" {
+					orderby = "-" + v
+				} else if order[i] == "asc" {
+					orderby = v
+				} else {
+					return nil, errors.New("Error: Invalid order. Must be either [asc|desc]")
+				}
+				sortFields = append(sortFields, orderby)
+			}
+			qs = qs.OrderBy(sortFields...)
+		} else if len(sortby) != len(order) && len(order) == 1 {
+			// 2) there is exactly one order, all the sorted fields will be sorted by this order
+			for _, v := range sortby {
+				orderby := ""
+				if order[0] == "desc" {
+					orderby = "-" + v
+				} else if order[0] == "asc" {
+					orderby = v
+				} else {
+					return nil, errors.New("Error: Invalid order. Must be either [asc|desc]")
+				}
+				sortFields = append(sortFields, orderby)
+			}
+		} else if len(sortby) != len(order) && len(order) != 1 {
+			return nil, errors.New("Error: 'sortby', 'order' sizes mismatch or 'order' size is not 1")
+		}
+	} else {
+		if len(order) != 0 {
+			return nil, errors.New("Error: unused 'order' fields")
+		}
+	}
+
+	var l []PeriodoRolUsuario
+	qs = qs.OrderBy(sortFields...)
+	if _, err = qs.Limit(limit, offset).All(&l, fields...); err == nil {
+		if len(fields) == 0 {
+			for _, v := range l {
+				formateado, err := formatoFechas(v)
+				if err != nil {
+					return nil, err
+				}
+				ml = append(ml, formateado)
+			}
+		} else {
+			// trim unused fields
+			for _, v := range l {
+				formateado, err := formatoFechas(v)
+				if err != nil {
+					return nil, err
+				}
+				m := make(map[string]interface{})
+				val := reflect.ValueOf(formateado)
+				for _, fname := range fields {
+					m[fname] = val.FieldByName(fname).Interface()
+				}
+				ml = append(ml, m)
+			}
+		}
+		return ml, nil
+	}
+	return nil, err
 }
